--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,4 +1,5 @@
 <mat-card>
+  <mat-toolbar color="primary">Cursos Disponíveis</mat-toolbar>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
     <!-- Position Column -->
